# blog-backend

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docker/: docker-compose.yaml
migrations/2022-06-20-184719_create_posts/: up.sql
migrations/2022-06-20-190153_create_users/: up.sql
migrations/2022-06-21-084002_create_tags/: down.sql  up.sql
migrations/2022-06-21-084027_create_commentaries/: down.sql  up.sql
migrations/2022-06-21-084256_create_post_tags_pivot/: down.sql  up.sql
migrations/2022-06-28-050418_create_post_tags_types/: down.sql  up.sql
migrations/2022-06-28-054942_create_post_view/: down.sql  up.sql
src/: consts.rs  main.rs  post_view_schema.rs  schema.rs
src/api/: commentaries_controller.rs  main_controller.rs  mod.rs  post_admin_controller.rs  post_controller.rs  tag_admin_controller.rs  tag_controller.rs  user_controller.rs
src/configurations/: cors.rs  db.rs  identity.rs  mod.rs  rate_limiting_governor.rs  router.rs
src/models/: commentaries.rs  filters.rs  mod.rs  pagination.rs  post.rs  response.rs  tags.rs  user.rs
src/services/: commentaries_service.rs  mod.rs  post_service.rs  rss_service.rs  sitemap_service.rs  tags_service.rs  user_service.rs
src/utils/: db_nav_post_type_wrapper.rs  db_tag_type_wrapper.rs  error_handling.rs  mod.rs
