[package]
name = "vendelieu-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-identity = "0.4.0"
actix-cors = "0.6.1"
actix-governor = "0.3.0"

chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"

bcrypt = "0.13.0"
failure = "0.1.8"
derive_more = "0.99.17"

validator = {version = "0.15.0", features = ["derive"] }

uuid = { version = "1.1.2", features = ["serde", "v4"] }

#serde
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"

# db
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "extras"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"