[package]
name = "vendelieu-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features = ["openssl"] }
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
actix-governor = "0.4.0"
actix-ip-filter = "0.3.1"
actix-web-validator = "5.0.1"

validator = { version = "0.16.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"

openssl = { version = "0.10.40", features = ["v110"] }
failure = "0.1.8"
derive_more = "0.99.17"

uuid = { version = "1.1.2", features = ["serde", "v4"] }

rss = "2.0"
sitewriter = "1.0.2"

#serde
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"

# db
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "extras"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"